--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -179,6 +179,9 @@
                                 <rect key="frame" x="0.0" y="142" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="1vw-bk-mUS" id="9lf-Q2-995"/>
+                                </connections>
                             </searchBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Exercícios" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKx-Br-fxz">
                                 <rect key="frame" x="20" y="103" width="109" height="30"/>
@@ -187,18 +190,54 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bvX-h5-luO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bvX-h5-luO">
                                 <rect key="frame" x="20" y="186" width="394" height="710"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="SAm-bq-eku">
-                                        <rect key="frame" x="0.0" y="44.5" width="394" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="customcell" rowHeight="120" id="SAm-bq-eku" customClass="CustomCell" customModule="ScolioKids" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="394" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SAm-bq-eku" id="utu-wA-3oP">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uma-HT-8Ol">
+                                                    <rect key="frame" x="5" y="5" width="384" height="110"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lombar" translatesAutoresizingMaskIntoConstraints="NO" id="8CQ-Ry-Flm">
+                                                            <rect key="frame" x="8" y="25" width="60" height="60"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="60" id="ihb-G0-DpK"/>
+                                                                <constraint firstAttribute="height" constant="60" id="wHy-rT-lJu"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lombar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lE8-es-pUN">
+                                                            <rect key="frame" x="171" y="35" width="63" height="41"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="8CQ-Ry-Flm" firstAttribute="leading" secondItem="uma-HT-8Ol" secondAttribute="leading" constant="8" id="PfS-AF-qYh"/>
+                                                        <constraint firstItem="8CQ-Ry-Flm" firstAttribute="centerY" secondItem="uma-HT-8Ol" secondAttribute="centerY" id="yuA-yo-mJc"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="uma-HT-8Ol" secondAttribute="bottom" constant="5" id="4dL-hr-M7T"/>
+                                                <constraint firstItem="uma-HT-8Ol" firstAttribute="top" secondItem="utu-wA-3oP" secondAttribute="top" constant="5" id="992-dk-VoF"/>
+                                                <constraint firstAttribute="trailing" secondItem="uma-HT-8Ol" secondAttribute="trailing" constant="5" id="mQV-FE-UTu"/>
+                                                <constraint firstItem="uma-HT-8Ol" firstAttribute="leading" secondItem="utu-wA-3oP" secondAttribute="leading" constant="5" id="wqK-Oz-xoE"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ExerciciosEspView" destination="uma-HT-8Ol" id="lfl-0j-ejw"/>
+                                            <outlet property="assetsImg" destination="8CQ-Ry-Flm" id="Ogs-qf-RIA"/>
+                                            <outlet property="nameLabel" destination="lE8-es-pUN" id="61w-Me-WJa"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -208,7 +247,11 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Title" id="UWR-n9-n7U">
-                        <barButtonItem key="rightBarButtonItem" title="Selecionar" id="REA-yK-79Z"/>
+                        <barButtonItem key="rightBarButtonItem" title="Selecionar" id="REA-yK-79Z">
+                            <connections>
+                                <action selector="seleciona:" destination="1vw-bk-mUS" id="CVY-O4-CNO"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -352,6 +395,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Lombar" width="852" height="480"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="homekit" catalog="system" width="128" height="106"/>
         <image name="stopwatch" catalog="system" width="121" height="128"/>
